[gd_scene load_steps=59 format=2]

[ext_resource path="res://Enemies/skeleton.png" type="Texture" id=1]
[ext_resource path="res://Hitboxes and Hurtboxes/Hurtbox.tscn" type="PackedScene" id=2]
[ext_resource path="res://Enemies/PlayerDetectionZone.tscn" type="PackedScene" id=3]
[ext_resource path="res://Stats.tscn" type="PackedScene" id=4]
[ext_resource path="res://Hitboxes and Hurtboxes/Hitbox.tscn" type="PackedScene" id=5]
[ext_resource path="res://Hitboxes and Hurtboxes/SoftCollision.tscn" type="PackedScene" id=6]
[ext_resource path="res://Enemies/WanderController.tscn" type="PackedScene" id=7]
[ext_resource path="res://Enemies/Skeleton.gd" type="Script" id=8]

[sub_resource type="CircleShape2D" id=1]
radius = 6.08276

[sub_resource type="Animation" id=11]
resource_name = "AttackLeft"
length = 0.5
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 12, 13, 14, 15, 16 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Sprite:flip_h")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}

[sub_resource type="Animation" id=12]
resource_name = "AttackRight"
length = 0.5
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 12, 13, 14, 15, 16 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Sprite:flip_h")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ false ]
}

[sub_resource type="Animation" id=8]
resource_name = "IdleLeft"
length = 0.5
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 3, 4 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Sprite:flip_h")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}

[sub_resource type="Animation" id=6]
resource_name = "IdleRight"
length = 0.5
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 3, 4 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Sprite:flip_h")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ false ]
}

[sub_resource type="Animation" id=7]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Sprite:flip_h")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ false ]
}

[sub_resource type="Animation" id=10]
resource_name = "RunLeft"
length = 0.6
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 6, 7, 8, 9, 10, 11 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Sprite:flip_h")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}

[sub_resource type="Animation" id=9]
resource_name = "RunRight"
length = 0.6
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 6, 7, 8, 9, 10, 11 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Sprite:flip_h")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ false ]
}

[sub_resource type="AnimationNodeBlendSpace2D" id=42]

[sub_resource type="AnimationNodeAnimation" id=33]
animation = "RunLeft"

[sub_resource type="AnimationNodeAnimation" id=34]
animation = "RunRight"

[sub_resource type="AnimationNodeAnimation" id=35]
animation = "RunRight"

[sub_resource type="AnimationNodeAnimation" id=36]
animation = "RunLeft"

[sub_resource type="AnimationNodeAnimation" id=37]
animation = "RunRight"

[sub_resource type="AnimationNodeAnimation" id=38]
animation = "RunRight"

[sub_resource type="AnimationNodeAnimation" id=39]
animation = "RunLeft"

[sub_resource type="AnimationNodeAnimation" id=40]
animation = "RunLeft"

[sub_resource type="AnimationNodeBlendSpace2D" id=41]
blend_point_0/node = SubResource( 33 )
blend_point_0/pos = Vector2( -1, 0 )
blend_point_1/node = SubResource( 34 )
blend_point_1/pos = Vector2( 0, 1 )
blend_point_2/node = SubResource( 35 )
blend_point_2/pos = Vector2( 1, 0 )
blend_point_3/node = SubResource( 36 )
blend_point_3/pos = Vector2( 0, -1 )
blend_point_4/node = SubResource( 37 )
blend_point_4/pos = Vector2( 1, -1 )
blend_point_5/node = SubResource( 38 )
blend_point_5/pos = Vector2( 1, 1 )
blend_point_6/node = SubResource( 39 )
blend_point_6/pos = Vector2( -1, 1 )
blend_point_7/node = SubResource( 40 )
blend_point_7/pos = Vector2( -1, -1 )
blend_mode = 1

[sub_resource type="AnimationNodeAnimation" id=13]
animation = "IdleLeft"

[sub_resource type="AnimationNodeAnimation" id=14]
animation = "IdleRight"

[sub_resource type="AnimationNodeAnimation" id=15]
animation = "IdleRight"

[sub_resource type="AnimationNodeAnimation" id=16]
animation = "IdleLeft"

[sub_resource type="AnimationNodeAnimation" id=17]
animation = "IdleLeft"

[sub_resource type="AnimationNodeAnimation" id=18]
animation = "IdleLeft"

[sub_resource type="AnimationNodeAnimation" id=19]
animation = "IdleRight"

[sub_resource type="AnimationNodeAnimation" id=20]
animation = "IdleRight"

[sub_resource type="AnimationNodeBlendSpace2D" id=21]
blend_point_0/node = SubResource( 13 )
blend_point_0/pos = Vector2( -1, 0 )
blend_point_1/node = SubResource( 14 )
blend_point_1/pos = Vector2( 0, 1 )
blend_point_2/node = SubResource( 15 )
blend_point_2/pos = Vector2( 1, 0 )
blend_point_3/node = SubResource( 16 )
blend_point_3/pos = Vector2( 0, -1 )
blend_point_4/node = SubResource( 17 )
blend_point_4/pos = Vector2( -1, 1 )
blend_point_5/node = SubResource( 18 )
blend_point_5/pos = Vector2( -1, -1 )
blend_point_6/node = SubResource( 19 )
blend_point_6/pos = Vector2( 1, 1 )
blend_point_7/node = SubResource( 20 )
blend_point_7/pos = Vector2( 1, -1 )
blend_mode = 1

[sub_resource type="AnimationNodeAnimation" id=24]
animation = "RunLeft"

[sub_resource type="AnimationNodeAnimation" id=25]
animation = "RunRight"

[sub_resource type="AnimationNodeAnimation" id=26]
animation = "RunRight"

[sub_resource type="AnimationNodeAnimation" id=27]
animation = "RunLeft"

[sub_resource type="AnimationNodeAnimation" id=28]
animation = "RunRight"

[sub_resource type="AnimationNodeAnimation" id=29]
animation = "RunRight"

[sub_resource type="AnimationNodeAnimation" id=30]
animation = "RunLeft"

[sub_resource type="AnimationNodeAnimation" id=31]
animation = "RunLeft"

[sub_resource type="AnimationNodeBlendSpace2D" id=32]
blend_point_0/node = SubResource( 24 )
blend_point_0/pos = Vector2( -1, 0 )
blend_point_1/node = SubResource( 25 )
blend_point_1/pos = Vector2( 0, 1 )
blend_point_2/node = SubResource( 26 )
blend_point_2/pos = Vector2( 1, 0 )
blend_point_3/node = SubResource( 27 )
blend_point_3/pos = Vector2( 0, -1 )
blend_point_4/node = SubResource( 28 )
blend_point_4/pos = Vector2( 1, -1 )
blend_point_5/node = SubResource( 29 )
blend_point_5/pos = Vector2( 1, 1 )
blend_point_6/node = SubResource( 30 )
blend_point_6/pos = Vector2( -1, 1 )
blend_point_7/node = SubResource( 31 )
blend_point_7/pos = Vector2( -1, -1 )
blend_mode = 1

[sub_resource type="AnimationNodeStateMachineTransition" id=43]

[sub_resource type="AnimationNodeStateMachineTransition" id=44]

[sub_resource type="AnimationNodeStateMachineTransition" id=45]

[sub_resource type="AnimationNodeStateMachineTransition" id=46]

[sub_resource type="AnimationNodeStateMachineTransition" id=47]

[sub_resource type="AnimationNodeStateMachineTransition" id=48]

[sub_resource type="AnimationNodeStateMachineTransition" id=49]

[sub_resource type="AnimationNodeStateMachineTransition" id=50]

[sub_resource type="AnimationNodeStateMachine" id=22]
states/Attack/node = SubResource( 42 )
states/Attack/position = Vector2( 573, 77 )
states/Chase/node = SubResource( 41 )
states/Chase/position = Vector2( 346, 143 )
states/Idle/node = SubResource( 21 )
states/Idle/position = Vector2( 160, 77 )
states/Walk/node = SubResource( 32 )
states/Walk/position = Vector2( 346, 16 )
transitions = [ "Idle", "Walk", SubResource( 43 ), "Walk", "Idle", SubResource( 44 ), "Idle", "Chase", SubResource( 45 ), "Chase", "Idle", SubResource( 46 ), "Walk", "Attack", SubResource( 47 ), "Attack", "Walk", SubResource( 48 ), "Chase", "Attack", SubResource( 49 ), "Attack", "Chase", SubResource( 50 ) ]
start_node = "Idle"
graph_offset = Vector2( -96, -18 )

[sub_resource type="AnimationNodeStateMachinePlayback" id=23]

[sub_resource type="CapsuleShape2D" id=2]
radius = 5.0
height = 6.0

[sub_resource type="CircleShape2D" id=3]
radius = 61.131

[sub_resource type="CircleShape2D" id=4]
radius = 7.0

[sub_resource type="CapsuleShape2D" id=5]
radius = 5.0
height = 6.0

[node name="Skeleton" type="KinematicBody2D"]
script = ExtResource( 8 )

[node name="Sprite" type="Sprite" parent="."]
position = Vector2( 1, -25 )
texture = ExtResource( 1 )
hframes = 6
vframes = 5

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
visible = false
position = Vector2( 0, -9 )
shape = SubResource( 1 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/AttackLeft = SubResource( 11 )
anims/AttackRight = SubResource( 12 )
anims/IdleLeft = SubResource( 8 )
anims/IdleRight = SubResource( 6 )
anims/RESET = SubResource( 7 )
anims/RunLeft = SubResource( 10 )
anims/RunRight = SubResource( 9 )

[node name="AnimationTree" type="AnimationTree" parent="."]
tree_root = SubResource( 22 )
anim_player = NodePath("../AnimationPlayer")
parameters/playback = SubResource( 23 )
parameters/Attack/blend_position = Vector2( 0, 0 )
parameters/Chase/blend_position = Vector2( 0, 0 )
parameters/Idle/blend_position = Vector2( -0.000862837, 0 )
parameters/Walk/blend_position = Vector2( -0.000862837, -0.00578034 )

[node name="Hurtbox" parent="." instance=ExtResource( 2 )]
visible = false

[node name="CollisionShape2D" parent="Hurtbox" index="0"]
position = Vector2( 1, -11 )
shape = SubResource( 2 )

[node name="Stats" parent="." instance=ExtResource( 4 )]

[node name="PlayerDetectionZone" parent="." instance=ExtResource( 3 )]
visible = false

[node name="CollisionShape2D" parent="PlayerDetectionZone" index="0"]
shape = SubResource( 3 )

[node name="Hitbox" parent="." instance=ExtResource( 5 )]
visible = false

[node name="CollisionShape2D" parent="Hitbox" index="0"]
position = Vector2( 1, -10 )
shape = SubResource( 4 )

[node name="SoftCollision" parent="." instance=ExtResource( 6 )]
visible = false

[node name="CollisionShape2D" parent="SoftCollision" index="0"]
position = Vector2( 1, -10 )
shape = SubResource( 5 )

[node name="WanderController" parent="." instance=ExtResource( 7 )]

[connection signal="area_entered" from="Hurtbox" to="." method="_on_Hurtbox_area_entered"]
[connection signal="invincibility_ended" from="Hurtbox" to="." method="_on_Hurtbox_invincibility_ended"]
[connection signal="invincibility_started" from="Hurtbox" to="." method="_on_Hurtbox_invincibility_started"]
[connection signal="no_health" from="Stats" to="." method="_on_Stats_no_health"]

[editable path="Hurtbox"]
[editable path="PlayerDetectionZone"]
[editable path="Hitbox"]
[editable path="SoftCollision"]
